--- a/web/src/app/static/intro/intro.component.html
+++ b/web/src/app/static/intro/intro.component.html
@@ -16,21 +16,17 @@
         <div class="home-contain">
           <div>
             <img
-              src="assets/images/logoimage.png"
+              src="assets/images/sortedLogo.png"
               alt="caption-img"
-              class="caption-img"
+              class="caption-img sorted-image"
             />
-            <h4>Landing Page For</h4>
-            <h1>
-              t
-              <span class="f-bold">o</span>
-              v
-              <span class="f-bold">o</span>
-              <span class="f-bold f-color">app</span>
+            <h1 class="name-color">
+                sort.it
+                <span class="f-bold f-color">app</span>
             </h1>
+            <h1><h4 class="tagline-color">Deciphering lives...</h4></h1>
             <p>
-              Enhance your business ideas with Powerful, Responsive, Elegant
-              TOVO Theme.
+                Get started on the path to yourself!
             </p>
             <a>
               <img
