--- a/web/src/app/static/price/price.component.html
+++ b/web/src/app/static/price/price.component.html
@@ -18,7 +18,7 @@
                     <ul class="price-feature">
                         <li *ngFor="let feature of slide.features" [innerHTML]="feature"></li>
                     </ul>
-                    <a type="button" class="btn btn-custom theme-color">Select Plan</a>
+                    <a type="button" class="btn btn-custom theme-color theme-color2">Select Plan</a>
                 </div>
             </ng-template>
         </owl-carousel-o>
