--- a/web/src/app/static/home/home.component.html
+++ b/web/src/app/static/home/home.component.html
@@ -3,10 +3,10 @@
 <app-about></app-about>
 <app-features></app-features>
 <app-screenshot></app-screenshot>
-<app-team></app-team>
-<app-blog></app-blog>
-<app-price></app-price>
+<!-- <app-team></app-team> -->
+<!-- <app-blog></app-blog> -->
+<!-- <app-price></app-price> -->
 <app-testimonial></app-testimonial>
 <app-contact-us></app-contact-us>
-<app-newsletter></app-newsletter>
+<!-- <app-newsletter></app-newsletter> -->
 <app-footer></app-footer>
