Updated GUI view based on review points.

--- a/web/src/app/static/intro/intro.component.html
+++ b/web/src/app/static/intro/intro.component.html
@@ -16,7 +16,7 @@
         <div class="home-contain">
           <div>
             <img
-              src="assets/images/sortedLogo.png"
+              src="assets/images/slogo.png"
               alt="caption-img"
               class="caption-img sorted-image"
             />
