--- a/web/src/app/static/footer/footer.component.html
+++ b/web/src/app/static/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="copyright-section index-footer">
-    <p>2020 Copyright of the idea by Sort.it</p>
+    <p>Sort.it | Sort.it Web App v 1.0.0 | 2020</p>
 </div>
