--- a/web/src/app/static/intro/intro.component.scss
+++ b/web/src/app/static/intro/intro.component.scss
@@ -1,7 +1,7 @@
 .home-contain {
-  .sorted-image {
-    width: 20%;
-  }
+//   .sorted-image {
+//     width: 35%;
+//   }
   .tagline-color {
       color: #212529;
   }
