--- a/web/src/app/static/intro/intro.component.html
+++ b/web/src/app/static/intro/intro.component.html
@@ -25,9 +25,7 @@
                 <span class="f-bold f-color">app</span>
             </h1>
             <h1><h4 class="tagline-color">Deciphering lives...</h4></h1>
-            <p>
-                Get started on the path to yourself!
-            </p>
+            <p>Get started on the path to yourself!</p>
             <a>
               <img
                 src="assets/images/appstore.png"
