--- a/web/src/app/static/contact-us/contact-us.component.html
+++ b/web/src/app/static/contact-us/contact-us.component.html
@@ -13,63 +13,33 @@
         <div class="contact-us">
           <div class="w-100">
             <h2 class="title"><span>contact </span>information</h2>
-            <form novalidate [formGroup]="form" class="theme-form" (ngSubmit)="formSubmit()">
+            <form novalidate [formGroup]="contactForm" class="theme-form" (ngSubmit)="onSubmit()">
               <div class="form-group">
                 <div class="row">
                   <div class="col-sm-12 col-md-6 md-fgrup-margin">
-                    <input
-                      type="text"
-                      name="name"
-                      formControlName="name"
-                      autocomplete="off"
-                      placeholder="your name"
-                      required=""
-                      class="form-control"
+                    <input type="text" name="name" formControlName="name" placeholder="your name" class="form-control"
                     />
                   </div>
                   <div class="col-sm-12 col-md-6">
-                    <input
-                      type="mobile"
-                      name="phone"
-                      formControlName="phone"
-                      autocomplete="off"
-                      placeholder="phone"
-                      required=""
-                      class="form-control"
+                    <input type="tel" name="phone" formControlName="phone" placeholder="phone" class="form-control"
                     />
+                    <div *ngIf="submitted && formControl.phone.errors.required && formControl.phone.errors.minLength && formControl.phone.errors.maxLength" class="text text-danger">Invalid Phone Number</div>
                   </div>
                 </div>
               </div>
               <div class="form-group">
-                <input
-                  type="email"
-                  name="email"
-                  formControlName="email"
-                  autocomplete="off"
-                  id="exampleFormControlInput1"
-                  placeholder="email address"
-                  required=""
-                  class="form-control"
+                <input type="email" name="email" formControlName="email" id="exampleFormControlInput1" placeholder="email address" class="form-control"
                 />
               </div>
               <div class="form-group">
-                <textarea
-                  name="message"
-                  formControlName="message"
-                  id="exampleFormControlTextarea1"
-                  autocomplete="off"
-                  rows="4"
-                  placeholder="message"
-                  required=""
-                  class="form-control"
+                <textarea name="message" formControlName="message" id="exampleFormControlTextarea1" rows="4" placeholder="message" class="form-control"
                 ></textarea>
               </div>
               <div class="form-button">
                 <button
                   type="submit"
                   class="btn btn-custom theme-color theme-color2"
-                  disabled="false"
-                  (click)="Submit($event)"
+                  disabled="submitted"
                 >
                   send
                 </button>
