Updated logo opacity based on scrolling and contact form highlight color.

--- a/web/src/app/static/about/about.component.html
+++ b/web/src/app/static/about/about.component.html
@@ -38,14 +38,10 @@
                 </div>
               </div>
             </div>
-            <div class="top-margin">
-              <button
-                type="button"
-                class="btn btn-custom theme-color theme-color theme-color2"
-              >
-                view more
+            <!-- <div class="top-margin">
+              <button type="button" class="btn btn-custom theme-color theme-color theme-color2">view more
               </button>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
