--- a/web/src/app/static/intro/intro.component.html
+++ b/web/src/app/static/intro/intro.component.html
@@ -20,7 +20,7 @@
               alt="caption-img"
               class="caption-img sorted-image"
             />
-            <h1 class="name-color">
+            <h1 id="AppName" class="name-color">
                 sort.it
                 <span class="f-bold f-color">app</span>
             </h1>
