--- a/web/src/app/static/header/header.component.html
+++ b/web/src/app/static/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light theme-nav fixed-top" [ngClass]="{'darkHeader': isScrolled}">
   <div class="container">
-    <a class="navbar-brand">
+    <a class="navbar-brand" [ngStyle]="{'opacity': LogoOpacity}">
       <img src="assets/images/slogopng.png" alt="logo" />
     </a>
     <button
