Updated static website

--- a/web/src/app/static/about/about.component.html
+++ b/web/src/app/static/about/about.component.html
@@ -1,8 +1,6 @@
 <section id="about" class="about">
   <div class="about-decor">
-    <div class="about-circle1">
-      <img src="assets/images/feature-circle.png" alt="team" />
-    </div>
+    
     <div class="about-circle2">
       <img src="assets/images/main-banner1.png" alt="banner" />
     </div>
@@ -13,14 +11,13 @@
         <div class="about-contain">
           <div>
             <h2 class="title">
-                Especially designed for
-              <span>you</span>
+                A community that
+              <span>Inspire Fitness</span>
             </h2>
             <p class="caption-about">
               Sort.it is a health-focused platform specially designed for you.
-              We’ll help you improve your lifestyle by strategizing your health
-              and productivity goals in a personalized manner by tracking your
-              day to day activities and expenses.
+              A place where you can discuss health & fitness, learn, get motivated, transform, share and explore opportunities in
+              health & fitness industry.
             </p>
             <div class="row sm-mb">
               <div *ngFor="let dataList of aboutData" class="col-6">
