--- a/web/src/app/static/home/home.component.html
+++ b/web/src/app/static/home/home.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <app-intro></app-intro>
 <app-about></app-about>
+<app-features-experts></app-features-experts>
 <app-features></app-features>
 <app-screenshot></app-screenshot>
 <!-- <app-team></app-team> -->
