--- a/web/src/app/static/intro/intro.component.html
+++ b/web/src/app/static/intro/intro.component.html
@@ -1,31 +1,33 @@
 <section id="home" class="home">
   <div class="home-decor">
     <div class="home-circle1">
-      <img src="assets/images/main-banner3.png" alt />
+      <img src="assets/images/muscle.png" alt width="80" class="img-fluid"/>
     </div>
     <div class="home-circle2">
-      <img src="assets/images/main-banner12.png" alt />
+      <img src="assets/images/health-report.png" alt width="90" class="img-fluid" />
     </div>
     <div class="home-circle3">
-      <img src="assets/images/main-banner1.png" alt />
+      <img src="assets/images/avatar.png" alt  width="60" class="img-fluid"/>
     </div>
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-md-5">
+      <div class="col-md-6">
         <div class="home-contain">
           <div>
             <img
-              src="assets/images/slogo.png"
+              src="assets/images/new_logo_1.png"
               alt="caption-img"
+              height="80"
               class="caption-img sorted-image"
             />
-            <h1 id="AppName" class="name-color">
-                sort.it
-                <span class="f-bold f-color">app</span>
-            </h1>
-            <h1><h4 class="tagline-color">Deciphering lives...</h4></h1>
-            <p>Get started on the path to yourself!</p>
+            <br>
+            <p>A rendezvous for the fitness conscious</p>
+            <h3 id="AppName" class="name-color">
+                The Best in class Fitness tracking and consultation
+            </h3>
+           
+            
             <a>
               <img
                 src="assets/images/appstore.png"
@@ -43,7 +45,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6 offset-md-1">
+      <div class="col-md-5 offset-md-1">
         <div class="home-right">
           <img
             data-tilt
