--- a/web/src/app/static/header/header.component.html
+++ b/web/src/app/static/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light theme-nav fixed-top" [ngClass]="{'darkHeader': isScrolled}">
   <div class="container">
     <a class="navbar-brand" [ngStyle]="{'opacity': LogoOpacity, 'margin-left': '1.5rem'}">
-      <img src="assets/images/slogopng.png" alt="logo" />
+      <img src="assets/images/new_logo_1.png" alt="logo"  height="50"/>
     </a>
     <button
       class="navbar-toggler"
